# matching_tools

./: README.md  pyproject.toml
examples/: basic_usage.py  test.ipynb
examples/.ipynb_checkpoints/: test-checkpoint.ipynb
matchingtools/: __init__.py  balance.py  core.py  diagnostics.py  display.py  inference.py  io.py
matchingtools_teaching.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_basic.py
